navbar navLinks corrected spacing

--- a/frontend/src/components/Navigation/navigation.css
+++ b/frontend/src/components/Navigation/navigation.css
@@ -62,16 +62,14 @@
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
-  width: 65px;
 }
 
-/* .navLink-container a {
-  height: 100%;
-  border-right: 2px solid white;
-} */
+.navLink-container a {
+  align-self: center;
+  padding: 10px 15px;
+}
 
-.navLink-container:hover {
+.navLink-container a:hover {
 background-color: #187aba;
 cursor: pointer;
 }
